try fixing buttons on mobile with position fixed

--- a/client/src/styles/gamesettings.scss
+++ b/client/src/styles/gamesettings.scss
@@ -34,7 +34,7 @@
         }
 
         .big-btn {
-            position: absolute;
+            position: fixed;
             bottom: 0px;
             left: 0px;
             right: 0px;
